<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="preference_abort_broadcast_title">Abort Broadcast</string>
    <string name="preference_wallet_title">Wallet</string>
    <string name="preference_wallet_summary">Send wallet messages</string>
    <string name="preference_notify_status_changes">Notify status changes</string>
    <string name="preference_live_title">LiveTracker</string>
    <string name="preference_live_summary">Periodic location notifications</string>
    <string name="preference_live_sleeptime_title">Sleeptime</string>
    <string name="preference_live_sleeptime_summary">Interval in minutes between notifications</string>
    <string name="preference_live_max_retries_title">Max Retries</string>
    <string name="preference_live_max_retries_summary">Max retries in case of location error</string>
    <string name="preference_virtual_fence_title">Virtual Fence</string>
    <string name="preference_virtual_fence_summary">Notify with location changes</string>
    <string name="preference_virtual_fence_origin_title">Origin Collect</string>
    <string name="preference_virtual_fence_origin_summary">Times for collect of origin point</string>
    <string name="preference_virtual_fence_radius_title">Max Radius Distance</string>
    <string name="preference_virtual_fence_radius_summary">Radius distance for start notifications</string>
    <string name="preference_aux_numbers_title">Use auxiliar numbers</string>
    <string name="preference_aux_numbers_summary">Use other numbers to parallel notifications</string>
    <string name="preference_number_category_title">Numbers</string>
    <string name="preference_services_category_title">Services</string>
    <string name="preference_live_screen_title">LiveTracker</string>
    <string name="preference_virtual_fence_screen_title">Virtual Fence</string>
    <string name="preference_misc_category_title">Misc</string>
    <string name="lock_service_locked_message">Module is now locked.</string>
    <string name="lock_service_unlocked_message">Module is now unlocked.</string>

    <string name="app_name">CarTracker</string>
    <string name="options">Settings</string>
    <string name="live_tracker">LiveTracker</string>
    <string name="about">About CarTracker</string>
    <string name="activity_main_functions">Functions</string>
    <string name="activity_main_get_location">Get Location</string>
    <string name="activity_main_get_wallet_info">Get Wallet Info</string>
    <string name="activity_main_get_server_status">Get Server Status</string>
    <string name="activity_main_services">Services</string>
    <string name="activity_main_lock_module">Lock Module</string>
    <string name="activity_main_live_tracker">Live Tracker</string>
    <string name="activity_main_virtual_fence">Virtual Fence</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="activity_main_drawer_settings">Settings</string>
    <string name="nav_header_description">Main Menu</string>
    <string name="activity_main_drawer_title_commands">Commands</string>
    <string name="activity_main_drawer_title_settings">Services</string>
    <string name="activity_main_drawer_operations">Operations</string>
    <string name="activity_main_drawer_configurations">Configurations</string>
    <string name="activity_main_drawer_get_status">Get Status</string>
    <string name="activity_main_drawer_lock_module">Lock Module</string>
    <string name="activity_main_drawer_live_tracker">Live Tracker</string>
    <string name="activity_main_drawer_virtual_fence">Virtual Fence</string>
    <string name="lock_fragment_lock_module">Lock Module</string>
    <string name="lock_fragment_unlock_module">Unlock Module</string>
    <string name="fragment_live_text_positions_no_saved_positions">No Saved Positions</string>
    <string name="fragment_title_actions">Actions</string>
    <string name="fragment_live_btn_trace_map">Trace Map</string>
    <string name="fragment_live_btn_view_log_history">View Log History</string>
    <string name="fragment_live_btn_clear_log_history">Clear Log History</string>
    <string name="fragment_live_tracker_clear_log_message">LiveTracker log history has cleared successfully!</string>
    <string name="fragment_live_text_positions_count">%1$d saved positions.\n\nLast saved:\n %2$s</string>
    <string name="button_enabled_click_to_disable">Enabled - Click to disable</string>
    <string name="button_disabled_click_to_enable">Disabled - Click to enable</string>
    <string name="fragment_live_tracker_is_now_enabled">LiveTracker is now enabled!</string>
    <string name="fragment_live_tracker_is_now_disabled">Live Tracker is now disabled!</string>
    <string name="fragment_virtual_fence_distance_radius">Configure Distance Radius</string>
    <string name="fragment_virtual_fence_is_now_enabled">Virtual Fence is now enabled!</string>
    <string name="fragment_virtual_fence_is_now_disabled">Virtual Fence is now disabled!</string>
    <string name="activity_main_drawer_last_info">Last Info Received</string>
    <string name="welcome_to_cartracker">Welcome to CarTracker</string>
    <string name="fragment_lock_is_locked">Module is Locked</string>
    <string name="fragment_lock_is_unlocked">Module is Unlocked</string>
    <string name="fragment_lock_command_has_sent">Command %1$s has sent. Wait for response.</string>
    <string name="requisition_resolver_info_title">CarTracker Info</string>
    <string name="fragment_info_info_title">Info</string>
    <string name="requisition_resolver_error_title">CarTracker Error</string>
    <string name="fragment_info_error_title">Error</string>
    <string name="requisition_resolver_location_title">CarTracker Location</string>
    <string name="requisition_resolver_location_text">Actual location</string>
    <string name="requisition_resolver_livetracker_title">LiveTracker</string>
    <string name="requisition_resolver_livetracker_text">LiveTracker has new update!</string>
    <string name="fragment_info_livetracker_title">LiveTracker</string>
    <string name="requisition_resolver_lock_title">CarTracker Lock Module</string>
    <string name="fragment_info_lock_title">Lock Module</string>
    <string name="requisition_resolver_status_title">CarTracker Status</string>
    <string name="fragment_info_status_title">Status</string>
    <string name="requisition_resolver_virtual_fence_title">Virtual Fence</string>
    <string name="fragment_info_virtual_fence_title">Virtual Fence</string>
    <string name="requisition_resolver_wallet_title">CarTracker Wallet</string>
    <string name="fragment_info_wallet_title">Wallet</string>
    <string name="alert_error">Error</string>
    <string name="notification_default_text">Click here for more details</string>
    <string name="function_location_message">Command \'Location\' has sent. Please wait.</string>
    <string name="function_wallet_message">Command \'Wallet\' has sent. Please wait.</string>
    <string name="function_status_message">Command \'Status\' has sent. Please wait.</string>
    <string name="fragment_live_log_history">LiveTracker Log History</string>
    <string name="preference_tracker_number_title">Car Number</string>
    <string name="preference_tracker_number_summary">Number of the car tracker</string>
    <string name="fragment_info_server_log_history">Server Log History</string>
    <string name="activity_main_drawer_user_manual">User Manual</string>
    <string name="fragment_info_location_title">Location</string>
    <string name="fragment_server_log_clear_log_history">Clear Log History</string>
    <string name="activity_main_drawer_log_info">Log Info</string>
    <string name="lock_vehicle">Lock Vehicle</string>
    <string name="unlock_vehicle">Unlock Vehicle</string>
    <string name="get_location">Get Location</string>
    <string name="obtain_firmware_version">Obtain Firmware Version</string>
    <string name="gps_restart">GPS Restart</string>
    <string name="tracker_restart">Tracker Restart</string>
    <string name="get_tracker_info">Get Tracker Info</string>
    <string name="set_tracker_language">Set Tracker Language</string>
    <string name="configure_apn">Configure APN</string>
    <string name="perform_factory_reset">Perform Factory Reset</string>
    <string name="configure_ip">Configure IP</string>
    <string name="product_registration">Product Registration</string>
    <string name="pair_number">Pair Number</string>
    <string name="delete_number">Delete Number</string>
    <string name="delete_all_paired_numbers">Delete All Paired Numbers</string>
    <string name="view_paired_numbers">View Paired Numbers</string>
    <string name="change_password">Change Password</string>
    <string name="set_virtual_fence">Set Virtual Fence</string>
    <string name="clear_virtual_fence">Clear Virtual Fence</string>
    <string name="set_over_speed_alarm">Set Over Speed Alarm</string>
    <string name="tracker_number">Tracker Number</string>
    <string name="msg_configure_tracker_number">Please configure your tracker number!</string>

</resources>
