<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.pilovieira.cartracker.client.lock.LockFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/fragment_lock_btn_last_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/fragment_title_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/fragment_title_actions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <Button
                    android:text="@string/lock_fragment_lock_module"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lock_fragment_btn_lock" />

                <Button
                    android:text="@string/lock_fragment_unlock_module"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lock_fragment_btn_unlock" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
